Fixed z-index issue for Full Content View

--- a/src/App.css
+++ b/src/App.css
@@ -389,7 +389,7 @@ body,html{
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 200;
+  z-index: 500;
   display: flex;
   align-items: center;
   justify-content: center;
